<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/textStyleParentLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/selectedTextStyleViewDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <TableLayout
        android:id="@+id/textStyleOptionsToggleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selectedTextStyleViewDisplay"
        android:paddingBottom="5dp"
        android:paddingTop="15dp">

        <TableRow
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.gc.materialdesign.views.ButtonFlat
                android:id="@+id/TextEmphasisButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="5dp"
                android:text="@string/emphasis" />

            <com.gc.materialdesign.views.ButtonFlat
                android:id="@+id/TextStyleButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:text="@string/font" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/emphasisTextStyleOptions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textStyleOptionsToggleLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/emphasisNormalTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/normal"
                android:textSize="30sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/emphasisBoldTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/bold"
                android:textSize="30sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/emphasisItalicTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/italic"
                android:textSize="30sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/emphasisBoldItalicTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/bold_italic"
                android:textSize="30sp"
                android:textStyle="bold|italic" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/typefaceTextStyleOptions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textStyleOptionsToggleLayout"
        android:visibility="invisible">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/typefaceDefaultTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/normal"
                android:textSize="30sp"
                android:typeface="normal" />

            <TextView
                android:id="@+id/typefaceMonospaceTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/monospace"
                android:textSize="30sp"
                android:typeface="monospace" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/typefaceSerifTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/serif"
                android:textSize="30sp"
                android:typeface="serif" />

            <TextView
                android:id="@+id/typefaceSanSerifTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sanserif"
                android:textSize="30sp"
                android:typeface="sans" />
        </TableRow>
    </TableLayout>
</RelativeLayout>