<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/selectedMarginViewDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_margins_dialog_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/left"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/leftMarginCounter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:gravity="right"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#1E88E5" />
        </LinearLayout>

        <com.gc.materialdesign.views.Slider
            android:id="@+id/leftMarginSlider"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#1E88E5"
            android:paddingBottom="20dp"
            android:layout_marginBottom="15dp"
            materialdesign:max="100"
            materialdesign:min="0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/topMarginCounter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:gravity="right"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#1E88E5" />
        </LinearLayout>

        <com.gc.materialdesign.views.Slider
            android:id="@+id/topMarginSlider"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#1E88E5"
            android:paddingBottom="20dp"
            android:layout_marginBottom="15dp"
            materialdesign:max="100"
            materialdesign:min="0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/right"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/rightMarginCounter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:gravity="right"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#1E88E5" />
        </LinearLayout>

        <com.gc.materialdesign.views.Slider
            android:id="@+id/rightMarginSlider"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#1E88E5"
            android:paddingBottom="20dp"
            android:layout_marginBottom="15dp"
            materialdesign:max="100"
            materialdesign:min="0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/bottomMarginCounter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:gravity="right"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#1E88E5" />
        </LinearLayout>

        <com.gc.materialdesign.views.Slider
            android:id="@+id/bottomMarginSlider"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#1E88E5"
            android:paddingBottom="20dp"
            android:layout_marginBottom="15dp"
            materialdesign:max="100"
            materialdesign:min="0" />

    </LinearLayout>
</ScrollView>